--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/report-editor/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.877ee712.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.dc902cfd.js">
-    <link rel="stylesheet" href="/assets/index.80c821ec.css">
+    <script type="module" crossorigin src="/report-editor/assets/index.877ee712.js"></script>
+    <link rel="modulepreload" href="/report-editor/assets/vendor.dc902cfd.js">
+    <link rel="stylesheet" href="/report-editor/assets/index.80c821ec.css">
   </head>
   <body>
     <div id="root"></div>
